--- a/src/App.css
+++ b/src/App.css
@@ -403,7 +403,7 @@ align-items: center;
   padding: 0;
   margin: 0;
 }
-.projectblock img {
+.projectblock video {
   width: 90%;
   height: 150px;
   border: 1px solid white;
