--- a/src/bodyComponents/about.css
+++ b/src/bodyComponents/about.css
@@ -5,10 +5,23 @@
     font-size: 50px;
     color: white;
 }
+.image-container{
+    width: 200%;
+}
 .About-image{
-    width: 30%;
+    width: 100%;
     border-radius: 50%;
     box-shadow: 1px 1px 5px black;
+    animation: fadeIn 2s ease-in-out;
+}
+
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .About-text{
     font-size: 5vh;
@@ -24,4 +37,13 @@
 }
 .About-text a:hover{
     color: #F30752
+}
+
+@media screen and (max-width: 650px){
+    .image-container{
+        width: 100%;
+    }
+    .About-text{
+        font-size: 2.5vh;
+    }
 }
