--- a/src/footer.css
+++ b/src/footer.css
@@ -1,10 +1,9 @@
 .socials {
-box-sizing: border-box;
 position: fixed;
-bottom: 0;
-right: 0;
-z-index: 2;
-margin: 0 .75em .75em 0;
+box-sizing: border-box;
+bottom: 2%;
+right: 5%;
+z-index: 5;
 color: white;
 display: flex;
 height: 10%;
@@ -17,6 +16,12 @@ text-decoration: none;
 color: white;
 border-radius: 50%;
 background-color: black;
+}
+.socials a:hover{
+    transform: scale(1.1);
+}
+.socials a:active{
+    transform: scale(.9);
 }
 
 .socials .fa-twitter {
@@ -31,11 +36,15 @@ color: #0A66C2;
 footer{
     background-color: black;
     color: white;
+    width: 100%;
     height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 address {
     text-align: center;
-    font-size: 2vw;
+    font-size: 3vw;
 }
 
 address a{
@@ -45,4 +54,15 @@ address a{
 
 address a:hover{
     color:#5f9eae;
+}
+
+@media only screen and (max-width:650px){
+    address{
+        font-size: 2vh;
+    }
+    .socials{
+        font-size: 10px;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
 }
