--- a/src/App.css
+++ b/src/App.css
@@ -354,6 +354,7 @@ button:focus{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  height: 75vh;
 }
 main h1{
   margin: 0;
