--- a/src/App.css
+++ b/src/App.css
@@ -153,8 +153,7 @@ main {
   text-align: justify;
 }
 #Performance {
-  transform-origin: 0% 0%;
-  transform: translate(0%, 25%);
+  transform-origin: 400px 600px;
   animation: loading 5s ease-in-out forwards infinite;
 }
 #loadBar{
@@ -213,20 +212,20 @@ main {
   }
   header{
     margin: 0;
-    padding: 0;
+    padding: 10px 10px 0 10px;
     width: 100vw;
   }
   header nav {
     width: 100%;
+    position: relative;
     flex-direction: column;
-    height: 75px;
-    box-sizing: border-box;
   }
   .nav-links{
     display: flex;
-    width: 50%;
-    position: relative;
+    width: 200px;
+    position: absolute;
     z-index: 1;
+    top: 54px;
     align-self: flex-end;
     flex-direction: column;
     background-color: white;
@@ -280,12 +279,12 @@ main {
   transform:translate(50%, 35%)
 }
 #talk1{
-  transform:translate(30%, 15%);
+  transform:translate(600px, 150px);
   animation: switch 3s 1.5s forwards infinite;
   opacity: 0;
 }
 #talk2{
-  transform:translate(40%, 15%);
+  transform:translate(800px, 150px);
   animation: switch 3s forwards infinite;
 }
 button{
@@ -459,26 +458,32 @@ align-items: center;
 }
 @keyframes loading{
   0%{
-    transform:translate(0%, 30%);
+    transform:translate(0, 500px);
   }
   40%{
-    transform:translate(50%, 30%);
+    transform:translate(1500px, 500px);
 
   }
   41%{
-    transform: translate(50%, 30%) rotate(60deg);
+    transform: translate(1500px, 500px) rotate(60deg);
+  }
+  45%{
+    transform: translate(1500px, 500px) rotate(160deg);
+  }
+  50%{
+    transform: translate(1500px, 500px) rotate(150deg);
   }
   59%{
-    transform: translate(50%, 30%) rotate(60deg);
+    transform: translate(1500px, 500px) rotate(150deg);
   }
   60%{
-    transform: translate(0%, 30%) rotate(0);
+    transform: translate(0, 500px) rotate(0);
   }
   80%{
-    transform:translate(65%, 30%);
+    transform:translate(1950px, 500px);
   }
   100%{
-    transform:translate(65%, 30%);
+    transform:translate(1950px, 500px);
   }
 }
 
@@ -548,55 +553,55 @@ align-items: center;
 
 @keyframes talk {
   0%{
-    transform:translate(25%, 35%);
+    transform:translate(500px, 350px);
   }
   10%{
-    transform:translate(25%, 30%) rotate(5deg);
+    transform:translate(500px, 300px) rotate(5deg);
   }
   20%{
-    transform:translate(25%, 35%);
+    transform:translate(500px, 350px);
   }
   30%{
-    transform:translate(25%, 30%) rotate(-5deg);
+    transform:translate(500px, 300px) rotate(-5deg);
  }
   40%{
-    transform:translate(25%, 35%);
+    transform:translate(500px, 350px);
   }
   50%{
-    transform:translate(25%, 30%) rotate(5deg);;
+    transform:translate(500px, 300px) rotate(5deg);;
   }
   55%{
-    transform:translate(25%, 35%);
+    transform:translate(500px, 350px);
   }
   100%{
-    transform:translate(25%, 35%);
+    transform:translate(500px, 350px);
   }
   
 }
 @keyframes talk2 {
   0%{
-    transform:translate(50%, 35%);
+    transform:translate(1000px, 350px);
   }
   10%{
-    transform:translate(50%, 30%) rotate(-5deg);
+    transform:translate(1000px, 300px) rotate(-5deg);
   }
   20%{
-    transform:translate(50%, 35%);
+    transform:translate(1000px, 350px);
   }
   30%{
-    transform:translate(50%, 30%) rotate(5deg);
+    transform:translate(1000px, 300px) rotate(5deg);
   }
   40%{
-    transform:translate(50%, 35%);
+    transform:translate(1000px, 350px);
   }
   50%{
-    transform:translate(50%, 30%) rotate(-5deg);
+    transform:translate(1000px, 300px) rotate(-5deg);
   }
   55%{
-    transform:translate(50%, 35%);
+    transform:translate(1000px, 350px);
   }
   100%{
-    transform:translate(50%, 35%);
+    transform:translate(1000px, 350px);
   }
   
 }
