--- a/src/Loading.css
+++ b/src/Loading.css
@@ -18,11 +18,11 @@
     animation: riseUp 1s 4s ease-in-out forwards;
 }
 #canvas{
-    transform-origin: top;
+    transform-origin: 0 0;
     transition: transform 4s ease-in-out, opacity 1s 4s ease-out;
 }
 .remove {
-    transform: translate(0, -400%);
+    transform: translate(0, -4000px);
     opacity: 0;
 }
 svg text{
@@ -30,19 +30,19 @@ svg text{
 }
 @keyframes riseUpMain{
     0%{
-        transform: translateY(150%)
+        transform: translateY(1500px)
     }
     25%{
-        transform: translateY(-10%);
+        transform: translateY(-100px);
     }
     50%{
-        transform: translateY(0%);
+        transform: translateY(0px);
     }
     75%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-200%);
+        transform: translateY(-2000px);
     }
 }
 @keyframes riseUp{
@@ -50,6 +50,6 @@ svg text{
         transform: translateY(0);
     }
     100%{
-        transform: translateY(-200%);
+        transform: translateY(-2000px);
     }
 }
