--- a/src/Loading.css
+++ b/src/Loading.css
@@ -47,7 +47,7 @@ svg text{
 }
 @keyframes riseUp{
     0%{
-        transform: translateY(0);
+        transform: translateY(0px);
     }
     100%{
         transform: translateY(-2000px);
