--- a/src/Loading.css
+++ b/src/Loading.css
@@ -8,10 +8,11 @@
     z-index: 99;
 }
 #mainLogo{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 #homeLogo{
+    transform: translate(120px, 1500px);
     animation: riseUpMain 4s 1s ease-in-out forwards;
 }
 .homeText{
@@ -22,7 +23,7 @@
     transition: transform 4s ease-in-out, opacity 1s 4s ease-out;
 }
 .remove {
-    transform: translate(0, -4000px);
+    transform: translateY(-4000px);
     opacity: 0;
 }
 svg text{
