Fix image route

--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ main {
   height: 40vw;
   position: relative;
   z-index: 0;
-  background-image: url("https://scontent-lga3-2.xx.fbcdn.net/v/t1.0-9/53817056_10219179150808238_7047033716228489216_o.jpg?_nc_cat=105&ccb=2&_nc_sid=730e14&_nc_ohc=umYMndsrxQsAX_b7Zhv&_nc_ht=scontent-lga3-2.xx&oh=5051598333b5360079a9a07446e8a6a2&oe=5FFC05A1");
+  background-image: url("https://photos.app.goo.gl/P8CXthQUQRLiuBtYA");
   background-size: cover;
   background-position: center;
   border-radius: 50%;
