--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ main {
   height: 40vw;
   position: relative;
   z-index: 0;
-  background-image: url("https://photos.app.goo.gl/P8CXthQUQRLiuBtYA");
+  background-image: url("./Profile_Pic.jpg");
   background-size: cover;
   background-position: center;
   border-radius: 50%;
