--- a/src/App.css
+++ b/src/App.css
@@ -391,11 +391,13 @@ box-sizing: border-box;
 flex: 0 0 25%;
 padding: 1%;
 align-items: center;
+justify-content: flex-start;
 }
 .projectblock h3 {
-  font-size: 25px;
+  font-size: 20px;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 .projectblock a {
   color: white;
@@ -678,7 +680,7 @@ align-items: center;
   border: 5px solid white;
   background: var(--primary-color);
   border-radius: 10px;
-  right: 100%;
+  right: 50%;
   width: 100%;
   transition: opacity 300ms ease-in-out;
   text-align: justify;
