--- a/src/App.css
+++ b/src/App.css
@@ -666,6 +666,9 @@ justify-content: flex-start;
   .resume-list{
     width: 90%;
   }
+  .Intro-text {
+    width: 100%;
+  }
 }
 
 .portfolio-image{
