--- a/src/App.css
+++ b/src/App.css
@@ -41,19 +41,17 @@ header nav {
   align-items: center;
   box-sizing: border-box;
 }
-header nav ul {
+header nav .nav-links {
   display: flex;
   margin: 0;
   padding: 0;
-  transition: transform 750ms ease-in-out;
-  transform-origin: top;
+  transition: height 750ms ease-in-out;
 }
 header nav ul li {
   display: flex;
   padding: .5em 1em;
   list-style: none;
   align-items: center;
-  transition: transform 750ms ease-in-out;
   transform-origin: top;
 }
 header nav ul a {
@@ -74,7 +72,9 @@ main{
 header nav ul a:hover .links{
   transform: rotate(90deg);
 }
-
+.nav-link a {
+  font-size: 20px;
+}
 .nav-header {
   width: fit-content;
   display: flex;
@@ -222,32 +222,26 @@ main {
     position: relative;
     flex-direction: column;
   }
+  .links{
+    width: 50px;
+    height: 50px;
+  }
   .nav-links{
     display: flex;
-    width: 200px;
+    width: 250px;
     position: absolute;
+    right: -20px;
     z-index: 1;
-    top: 54px;
+    top: 61px;
     align-self: flex-end;
     flex-direction: column;
     background-color: white;
-    transform: scaleY(0);
-    }
-  .nav-links li{
-    transform: scaleY(0);
-    font-size: 2.8vw;
-  }
-  .nav-links li a .links{
-    transform: translate(0, -200%);
-  }
-  .nav-links-active li a .links{
-    transform: translate(0);
+    height: 0;
+    overflow: hidden;
+    transition: height 750ms ease-in-out;
   }
   .nav-links-active {
-    transform:scaleY(1);
-  }
-  .nav-links-active li{
-    transform:scaleY(1);
+    height: 350px;
   }
   .nav-menu{
     padding-right: .5em;
